--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 :root {
-    --bg-color: #ffffff;
+    --bg-color: #1a1a1a;
 }
 
 body,html{
@@ -8,14 +8,14 @@ body,html{
     background-color: var(--bg-color);
 }
 h1,h2,h3,p,a{
-    color: #2c2c2c;
+    color: #ffffff;
 }
 
 header{
     height: 50vh;
     margin: 0;
     background-image:
-        linear-gradient(#ffffff2a, #ffffffc5),
+        linear-gradient(#1a1a1a2a, #1a1a1ac5),
         url("https://kotoca.net/KOTOCA.webp");
     background-position: center;
     background-size: cover;
@@ -60,7 +60,7 @@ header h1{
     border-radius: 5px;
 }
 .to_top_link:hover{
-    background-color: #2c2c2c22;
+    background-color: #ffffff22;
 }
 
 main{
@@ -108,7 +108,7 @@ main{
     margin: 10px;
     padding: 10px;
     border-radius: 5px;
-    box-shadow: #2c2c2c22 0px 0px 10px;
+    box-shadow: #ffffff22 0px 0px 10px;
 }
 .se_content h3{
     margin: 0 0 10px 0;
@@ -147,7 +147,7 @@ main{
 
 #pastincident_div a h3, #pastincident_div a p{
     margin: 0;
-    color: #2c2c2c;
+    color: #ffffff;
 }
 .past_incident_error{
     border: #aa0000 solid 2px;
@@ -193,8 +193,8 @@ body.scrolled header{
     display: flex;
     flex-direction: row;
     justify-content: left;
-    background-color: #ffffff;
-    box-shadow: #2c2c2c22 0px 0px 10px;
+    background-color: #1a1a1a;
+    box-shadow: #ffffff22 0px 0px 10px;
 }
 body.scrolled header img{
     display: block;
